--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,124 @@
-.App {
-  text-align: center;
+/* Grid */
+.grid {
+	display: grid;
+}
+.grid-template {
+	grid-template:
+		"title title" 50px
+		"form qrcode" 400px
+		/ 1fr 1fr; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.gap {
+	gap: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.column-gap {
+	gap: 2px;
+	column-gap: 20px;
+}
+
+.row-gap {
+	gap: 2px;
+	row-gap: 20px;
+}
+
+.margin {
+	margin-top: 10px;
+	margin-left: 20px;
+	margin-bottom: 50px;
+}
+
+.title {
+	grid-area: title;
+}
+
+.qrcode {
+	grid-area: qrcode;
+	align-items: center;
+}
+
+.form {
+	grid-area: form;
+}
+
+/* Grid Item */
+.item {
+	text-align: left;
+	font-size: 1.2em;
+}
+
+.grid {
+	max-width: 800px;
+	margin: 0 auto; 
+	background: #555;
+	border-radius: 25px;
+}
+
+body {
+	font-family: monospace;
+	color: #333;
+	padding-bottom: 10px;
+	margin: 0px;
+}
+
+body > div {
+	padding: 40px 0;
+}
+
+body > div:nth-of-type(even) {
+	background: rgba(0,0,0,.03);
+}
+
+body > div > img {
+	display: block;
+	margin: 0 auto;
+	max-width: 100%;
+}
+
+canvas {
+	display: block;
+	margin: 0 auto;
+}
+
+label {
+	font-size: 16px;
+	font-weight: bold;
+	margin-left: 20px;
+	color: #a63100
+}
+
+input[type=text], select {
+	width: 90%;
+	padding: 12px 20px;
+	margin: 8px auto;
+	display: block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 18px;
+}
+
+  input[type=button] {
+	width: 90%;
+	background-color: #a63100;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	display: block;
+	margin: 8px auto;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  input[type=submit]:hover {
+	background-color: #a63100;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+	text-align: center;
+	margin-top: 10px;
+	color: #ccc;
+	font-family: monospace;
   }
-}
